# slopwrap

./: Cargo.toml  README.md  flake.nix
scripts/: fuzz.sh
src/: diff.rs  main.rs  overlay.rs  sandbox.rs
tests/: exit_code.rs  overlay.rs  sandbox.rs
