[package]
name = "slopwrap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
walkdir = "1"
nix = { version = "0.29", features = ["fs", "signal"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
arbtest = "0.3"
